--- a/public/css/sb-admin-2.css
+++ b/public/css/sb-admin-2.css
@@ -10866,6 +10866,12 @@ a:focus {
   background-size: cover;
 }
 
+.bg-finish-image {
+  background: url("/img/gracias.webp");
+  background-position: center;
+  background-size: cover;
+}
+
 .bg-register-image {
   background: url("https://source.unsplash.com/Mv9hjnEUHR4/600x800");
   background-position: center;
